# uswarm-unitctl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile.aarch64  Makefile  README.md  build.rs  config.toml.example
.pi/: settings.json  teams.yaml
.pi/agents/: plan-reviewer.md  (+4 more)
scripts/: gps-hardcode.py  install.sh  modem-restart.sh  openipc-camera-restart.sh  reset-serial-device.sh  run-camera.sh  run-mavlink.sh  servingcell_output.py  usb-camera.py
services/: camera-watcher.path  camera-watcher.service  camera.service  fluentbit-watcher.path  fluentbit-watcher.service  fluentbit.service  mavlink-restart.service  mavlink-restart.timer  mavlink-watcher.path  mavlink-watcher.service  mavlink.service  modem-restart.service  modem-restart.timer  tty-fc-check.service  unitctl-watcher.path  unitctl-watcher.service  unitctl.service
src/: config.rs  context.rs  lib.rs  main.rs  net.rs
tests/: mqtt_integration.rs
unitctl/: CLAUDE.md  Cargo.toml  README.md  build.rs  config.toml.example
unitctl/assets/schema/command/: envelope.json  result.json  status.json
unitctl/assets/schema/telemetry/: envelope.json
unitctl/src/: config.rs  context.rs  main.rs
unitctl/src/env/: camera_env.rs  mavlink_env.rs
unitctl/src/mavlink/: drone_component.rs  mod.rs  sniffer_component.rs  telemetry_reporter.rs
unitctl/src/messages/: mod.rs  schema.rs  telemetry.rs
unitctl/src/sensors/: cpu_temp.rs  lte.rs  mod.rs  ping.rs
unitctl/src/services/: mod.rs  modem_access.rs
unitctl/src/services/mqtt/: commands.rs  mod.rs  telemetry.rs  tls.rs  transport.rs
unitctl/src/services/mqtt/handlers/: config_update.rs  get_config.rs  mod.rs  modem_commands.rs  update_request.rs
unitctl/tests/: docker-compose.mqtt.yml  mqtt_integration.rs  run_mqtt_tests.sh
unitctl/tests/fixtures/: gen_certs.rs  generate_certs.sh  mosquitto.conf
unitctl/tests/fixtures/certs/: ca.key  ca.pem  client.key  client.pem  server.key  server.pem
(+80 files in other folders)
