[package]
name = "unitctl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "process", "net", "io-util"] }
mavlink = { version = "0.17.1", features = ["ardupilotmega", "tcp"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
toml = "1.0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
regex = "1"
nix = { version = "0.31.2", features = ["signal", "process"] }
modemmanager = { git = "https://github.com/omnect/modemmanager.git", rev = "dfab97416092c71651a8a5138c9caa85576aebdb" }
zbus = { version = "5" }
rumqttc = { version = "0.24", features = ["use-rustls"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
thiserror = "2"
x509-parser = "0.16"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
testcontainers = "0.27"

[[bin]]
name = "unitctl"
path = "src/main.rs"

[[bin]]
name = "generate-schema"
path = "src/bin/generate_schema.rs"

[[example]]
name = "gen_certs"
path = "tests/fixtures/gen_certs.rs"
